Fixed next and previous buttons overflow on image modal
Bug: T184971

--- a/style.less
+++ b/style.less
@@ -644,3 +644,7 @@ div.jqcloud span.w1 {
 		display: none;
 	}
 }
+
+.ekko-lightbox-nav-overlay a span {
+	padding: 0;
+}
